--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h3 id="javascript">Javascript</h3>
+<h3 id="php">Php</h3>
+<h3 id="python">Python</h3>
+
     <script src="./index.js"></script>
 </body>
 </html>
