--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h3 id="javascript">Javascript</h3>
-<h3 id="php">Php</h3>
-<h3 id="python">Python</h3>
+<h3 data-lang="js" id="javascript">Javascript</h3> <!---je lie mes balises sans la class sans l'id  avec des data pour les retrouver---------------->
+<h3 data-lang="ph" id="php">Php</h3>
+<h3 data-lang="py" id="python">Python</h3>
 
     <script src="./index.js"></script>
 </body>
